id stat e calcolo in abilita